# dart_freetype

./: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
example/: example.dart  high_level_cross_platform.dart  native_ffi_low_level.dart
ios/: CMakeLists.txt  dart_freetype.podspec
lib/: dart_freetype.dart  dart_freetype_ffi.dart  dart_freetype_wasm.dart
lib/src/: generated_bindings.dart  load.dart
lib/src/extensions/: extensions.dart
lib/src/wrapper/: freetype.dart  freetype_native.dart  freetype_wasm.dart
linux/: CMakeLists.txt
macos/: CMakeLists.txt  libfreetype.6.dylib
native_libs/wasm/: freetype.js  freetype.wasm
scripts/: build.sh  build_android.sh  build_ios.sh  build_wasm.sh  test_all.sh
src/: dart_freetype.c  freetype_wrapper.c
src/freetype/: CMakeLists.txt
src/freetype/build_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  freetype.sln  freetype.vcxproj  freetype.vcxproj.filters  freetype2.pc
src/freetype/build_windows/freetype.dir/Release/freetype.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  freetype.lastbuildstate
src/freetype/build_windows/include/freetype/config/: ftoption.h
src/freetype/build_windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/freetype/build_windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test/vm/: native_dllpath_override_test.dart
test/web/: web_wasm_module_test.dart
web/: CMakeLists.txt
windows/: CMakeLists.txt
